# wasm-playground

./: .gitignore
component_calling_host_calling_plugins/: Cargo.toml  readme.md
component_calling_host_calling_plugins/application/: Cargo.toml
component_calling_host_calling_plugins/application/src/: main.rs  plugin_host.rs  plugin_state.rs
component_calling_host_calling_plugins/custom_plugin/: Cargo.toml
component_calling_host_calling_plugins/custom_plugin/src/: lib.rs
component_calling_host_calling_plugins/pluggable/: Cargo.toml
component_calling_host_calling_plugins/pluggable/src/: lib.rs
component_calling_host_calling_plugins/pluggable/wit/: pluggable.wit
component_calling_host_calling_plugins/plugin_api/: Cargo.toml
component_calling_host_calling_plugins/plugin_api/src/: lib.rs
component_calling_host_calling_plugins/plugin_api/wit/: world.wit
component_calling_host_calling_plugins/plugin_host_api/: Cargo.toml
component_calling_host_calling_plugins/plugin_host_api/src/: lib.rs
component_calling_host_calling_plugins/plugin_host_api/wit/: world.wit
component_calling_host_calling_plugins/wit/: all.wit
component_calling_plugins/: host.js  package.json  readme.md
component_calling_plugins/application/: Cargo.toml
component_calling_plugins/application/src/: main.rs  plugin_host.rs
component_calling_plugins/pluggable/: Cargo.toml
component_calling_plugins/pluggable/src/: lib.rs
component_calling_plugins/plugin_api/: Cargo.toml
component_calling_plugins/plugin_host_api/: Cargo.toml
component_calling_plugins/rust/: Cargo.toml
component_calling_plugins/rust/custom_plugin/: Cargo.toml
component_calling_plugins/rust/custom_plugin/src/: bindings.rs  lib.rs
host_calling_plugins/: Cargo.toml  readme.md
host_calling_plugins/application/src/: main.rs  (+1 more)
host_calling_plugins/custom_plugin/: Cargo.toml
(+15 files in other folders)
