[package]
name = "custom_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }
plugin_api={path="../plugin_api"}

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "example:pluggable"

[package.metadata.component.target]
world = "plugin"

[package.metadata.component.dependencies]
