[package]
name = "pluggable"
version = "0.1.0"
edition = "2024"

[dependencies]
#wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
wit-bindgen = "0.42.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "example:pluggable"

[package.metadata.component.target.dependencies]
"example:plugin-host" = {path="../plugin_host_api/wit"}
