[package]
name = "pluggable"
version = "0.1.0"
edition = "2024"

[dependencies]
#wit-bindgen-rt = { version = "0.43", features = ["bitflags"] }
wit-bindgen = "0.43"
plugin_api={path="../plugin_api"}

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "example:pluggable"

[package.metadata.component.target.dependencies]
"example:plugin-host" = {path="../plugin_host_api/wit"}
